ingress-nginx.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: test.apps.example.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sf-webserver
            port:
              number: 80
